WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85104
[BlackBerry] Double tap zooming does nothing on table element on bustedtees.com
https://bugs.webkit.org/show_bug.cgi?id=85104
Summary
[BlackBerry] Double tap zooming does nothing on table element on bustedtees.com
Jacky Jiang
Reported
2012-04-27 15:45:01 PDT
Steps: ------ 1) Launch browser and visit www.bustedtees.com 2) scroll a bit down and try double tap to zoom and images Expected: --------- 2) image zooms in Actual: ------- 2) Nothing happens
Attachments
Patch
(3.84 KB, patch)
2012-04-27 16:47 PDT
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2012-04-27 16:47:48 PDT
Created
attachment 139307
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-27 19:43:02 PDT
Comment on
attachment 139307
[details]
Patch Clearing flags on attachment: 139307 Committed
r115528
: <
http://trac.webkit.org/changeset/115528
>
WebKit Review Bot
Comment 3
2012-04-27 19:43:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug