[BlackBerry] Double tap zooming does nothing on table element on bustedtees.com https://bugs.webkit.org/show_bug.cgi?id=85104

Patch by Jacky Jiang <zhajiang@rim.com> on 2012-04-27
Reviewed by George Staikos.

PR: 147006
This was caused by the incorrect fix master_33/SHA:612caec4.
Calculations like this "originalArea / pageArea" would always return 0
so that the incorrect node and blockRect were used by block zoom. This
patch takes care of it.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::blockZoomRectForNode):
(BlackBerry::WebKit::WebPage::blockZoom):

Canonical link: https://commits.webkit.org/102652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115528 268f45cc-cd09-0410-ab3c-d52691b4dbfc